--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: mysql:latest
     container_name: mysql1
     environment:
-      MYSQL_ROOT_PASSWORD: qwerty
-      MYSQL_DATABASE: assignment_database
-      MYSQL_USER: team2_user
-      MYSQL_PASSWORD: qwerty
+      MYSQL_ROOT_PASSWORD: 
+      MYSQL_DATABASE: 
+      MYSQL_USER: 
+      MYSQL_PASSWORD: 
     ports:
       - '3308:3306'
     volumes:
